# RegressorGE

./: .gitignore  analysis.ipynb  example.csv  hybrid_models.ipynb  ltsm.ipynb  pyproject.toml  regressor_ge.ipynb
datasets/: arima_data.xlsx  data.xlsx  sarima_data.xlsx
fitness/: number_match.py  regression.py
grammars/: expression.bnf  regressors.bnf
parameters/: number_match.txt  regression.txt
results/: baseline_results.csv  comparison_summary.csv  experiment_results.csv  hybrid_models_results.csv  lstm_results.csv  nemenyi_comparisons.csv  persistence_results.csv  statistical_analysis_summary.txt
