[project]
name = "regressorge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autorank>=1.3.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "sewar>=0.4.6",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
]
